<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:backgroundTint="@color/darker_gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="DuplicateIds">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/security"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        app:cardElevation="16dp"
        android:id="@+id/pink_card"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#c8454f"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/text_sos"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="360dp"
        android:elevation="32dp"
        android:text="@string/sos"
        android:textColor="#FFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/sos_msg"
        android:elevation="32dp"
        android:text="@string/in_case_of_emergency_keep_telling_my_family_members_to_contact_me"
        android:textColor="#FFF"
        app:layout_constraintTop_toBottomOf="@id/text_sos"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toStartOf="@id/sos_img"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        />

    <ImageView
        android:src="@drawable/ic_sos"
        android:elevation="32dp"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="@id/pink_card"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        app:layout_constraintBottom_toBottomOf="@id/pink_card"
        android:id="@+id/sos_img"
        />

    <TextView
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card"
        android:id="@+id/text_guard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="360dp"
        android:elevation="32dp"
        android:text="@string/guard"
        android:textColor="#FFF"
        android:textSize="24sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/guard_msg"
        android:elevation="32dp"
        android:text="@string/travelling_at_an_unknown_place_click_here_when_you_are_on_a_potentially_dangerous_journey"
        android:textColor="#FFF"
        app:layout_constraintTop_toBottomOf="@id/text_guard"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toStartOf="@id/guard_img"
        app:layout_constraintStart_toStartOf="@id/green_card"
        />

    <ImageView
        android:src="@drawable/ic_guard"
        android:elevation="32dp"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="@id/green_card"
        app:layout_constraintEnd_toEndOf="@id/green_card"
        app:layout_constraintBottom_toBottomOf="@id/green_card"
        android:id="@+id/guard_img"
        />


    <com.google.android.material.card.MaterialCardView
        app:cardElevation="16dp"
        android:id="@+id/green_card"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        android:layout_marginTop="36dp"
        app:cardBackgroundColor="#63d2c7"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@+id/pink_card"
        tools:layout_editor_absoluteX="16dp" />



</androidx.constraintlayout.widget.ConstraintLayout>